handling db/migration, exception, grpc calls, image & donation grpc service and configure two profile approach